--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
             <hr class="my-4">
             <p>Answer a few basic questions.</p>
             <p>Then find the friend with the greatest compatibility!</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Take Survey</a>
+            <a class="btn btn-primary btn-lg" href="/survey" role="button">Take Survey</a>
         </div>
         <footer class="footer">
             <div class="container">
