--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+
     <script src="https://code.jquery.com/jquery.js"></script>
 
     <title>Friend Finder</title>
@@ -166,6 +166,24 @@
             </div>
         </footer>
     </div>
+    <div id="myModal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Match Found!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -182,13 +200,12 @@
 
     <script>
         $("#submitSurvey").click(function (event) {
-            //event.preventDefault();
 
-            console.log("hi");
-            
+            console.log("hii");
+
             var input = {
                 name: $("#name").val(),
-                photo: $("#img").val(),
+                image: $("#image").val(),
                 scores: [
                     $("#q1").val(),
                     $("#q2").val(),
@@ -204,7 +221,7 @@
             };
 
             $.post("/api/friends", input, function (data, status) {
-                alert("Data: " + data + "\nStatus: " + status);
+                $("#myModal").modal("show");
             });
         });
     </script>
