--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -175,8 +175,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <p>Modal body text goes here.</p>
+                <div id="modalMatch" class="modal-body">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -200,6 +199,7 @@
 
     <script>
         $("#submitSurvey").click(function (event) {
+            event.preventDefault();
 
             console.log("hii");
 
@@ -220,7 +220,29 @@
                 ]
             };
 
-            $.post("/api/friends", input, function (data, status) {
+            var match;
+            var compareNum = 0;
+            var resultNum = 100;
+            var result;
+
+            $.get("/api/friends", function(data){
+                for (let i = 0; i < data.length; i++) {
+                    
+                    for (let j = 0; j < data[i].scores.length; j++) {
+                        compareNum += Math.abs(parseInt(data[i].scores[j]) - parseInt(input.scores[j]));
+                    }
+                    console.log(compareNum);
+                    
+                    if(compareNum < resultNum){
+                        result = data[i];
+                        resultNum = compareNum;
+                    }
+                    compareNum = 0;
+                }
+            });
+
+            $.post("/api/friends", input, function (data) {
+                $("#modalMatch").html(`<p>${result.name}</p>`)
                 $("#myModal").modal("show");
             });
         });
